# project-information-retrieval

./: .gitignore  .replit  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.circleci/: config.yml
files/: beer.csv
lyrics_dir/: _MAIN_1.toc
templates/: base.html  beer.html  grocery.html  home.html  lyrics.html
