[tool.poetry]
name = "project-information-retrieval"
version = "0.1.0"
description = ""
authors = ["sp1222 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
whoosh = "^2.7.4"
flask = "^1.1.2"
google-api-python-client = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
